--- a/signaling server/package.json
+++ b/signaling server/package.json
@@ -14,11 +14,12 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "env-cmd": "^10.1.0",
         "express": "^4.17.1",
+        "simple_webrtc_signaling_server": "file:",
         "sirv": "^1.0.5",
         "socket.io": "^4.0.1",
-        "socket.io-client": "^4.0.1",
-        "env-cmd": "^10.1.0"
+        "socket.io-client": "^4.0.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
