--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ qt_add_qml_module(P2PVoiceCall
     QML_FILES
     Main.qml
         SOURCES webrtc.cpp webrtc.h
-        SOURCES audioinput.cpp audioinput.h
+        SOURCES audioinput.cpp audioinput.h audiooutput.cpp audiooutput.h
         SOURCES socket.io-client-cpp/src/sio_client.cpp socket.io-client-cpp/src/sio_client.h socket.io-client-cpp/src/sio_message.h socket.io-client-cpp/src/sio_socket.cpp socket.io-client-cpp/src/sio_socket.h
         SOURCES socket.io-client-cpp/src/internal/sio_client_impl.cpp socket.io-client-cpp/src/internal/sio_client_impl.h socket.io-client-cpp/src/internal/sio_packet.cpp socket.io-client-cpp/src/internal/sio_packet.h
         SOURCES signalmanager.h signalmanager.cpp
