--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,17 +22,14 @@ qt_add_executable(P2PVoiceCall
 )
 
 qt_add_qml_module(P2PVoiceCall
-    URI CA1
+    URI P2PVoiceCall
     VERSION 1.0
-    QML_FILES
-    Main.qml
-        SOURCES webrtc.cpp webrtc.h
-        SOURCES audioinput.cpp audioinput.h audiooutput.cpp audiooutput.h
-        SOURCES socket.io-client-cpp/src/sio_client.cpp socket.io-client-cpp/src/sio_client.h socket.io-client-cpp/src/sio_message.h socket.io-client-cpp/src/sio_socket.cpp socket.io-client-cpp/src/sio_socket.h
-        SOURCES socket.io-client-cpp/src/internal/sio_client_impl.cpp socket.io-client-cpp/src/internal/sio_client_impl.h socket.io-client-cpp/src/internal/sio_packet.cpp socket.io-client-cpp/src/internal/sio_packet.h
-        SOURCES signalmanager.h signalmanager.cpp
-        # SOURCES socket.io-client-cpp11-non-boost/src/sio_client.cpp socket.io-client-cpp11-non-boost/src/sio_client.h socket.io-client-cpp11-non-boost/src/sio_message.h socket.io-client-cpp11-non-boost/src/sio_socket.cpp socket.io-client-cpp11-non-boost/src/sio_socket.h
-        # SOURCES socket.io-client-cpp11-non-boost/src/internal/sio_client_impl.cpp socket.io-client-cpp11-non-boost/src/internal/sio_client_impl.h socket.io-client-cpp11-non-boost/src/internal/sio_packet.cpp socket.io-client-cpp11-non-boost/src/internal/sio_packet.h
+    SOURCES webrtc.cpp webrtc.h
+    SOURCES audioinput.cpp audioinput.h audiooutput.cpp audiooutput.h
+    SOURCES socket.io-client-cpp/src/sio_client.cpp socket.io-client-cpp/src/sio_client.h socket.io-client-cpp/src/sio_message.h socket.io-client-cpp/src/sio_socket.cpp socket.io-client-cpp/src/sio_socket.h
+    SOURCES socket.io-client-cpp/src/internal/sio_client_impl.cpp socket.io-client-cpp/src/internal/sio_client_impl.h socket.io-client-cpp/src/internal/sio_packet.cpp socket.io-client-cpp/src/internal/sio_packet.h
+    SOURCES signalmanager.h signalmanager.cpp
+    RESOURCES resources.qrc
 )
 set_target_properties(P2PVoiceCall PROPERTIES
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
