--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,42 +8,23 @@ set(OPENSSL_ROOT_DIR "C:/Qt/Tools/OpenSSLv3/Win_x64")
 set(OPENSSL_INCLUDE_DIR "C:/Qt/Tools/OpenSSLv3/Win_x64/include")
 set(OPENSSL_LIBRARIES "C:/Qt/Tools/OpenSSLv3/Win_x64/lib")
 
-find_package(Qt6 6.5 REQUIRED COMPONENTS Core Gui Quick Multimedia Widgets)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Multimedia)
+find_package(OpenSSL REQUIRED)
 
 qt_standard_project_setup(REQUIRES 6.5)
 
-qt_add_executable(P2PVoiceCall
-    main.cpp
-    audioinput.cpp
-    audioinput.h
-    audiooutput.cpp
-    audiooutput.h
-    webrtc.cpp
-    webrtc.h
-    socket.io-client-cpp/src/sio_client.cpp
-    socket.io-client-cpp/src/sio_client.h
-    socket.io-client-cpp/src/sio_message.h
-    socket.io-client-cpp/src/sio_socket.cpp
-    socket.io-client-cpp/src/sio_socket.h
-    socket.io-client-cpp/src/internal/sio_client_impl.cpp
-    socket.io-client-cpp/src/internal/sio_client_impl.h
-    socket.io-client-cpp/src/internal/sio_packet.cpp
-    socket.io-client-cpp/src/internal/sio_packet.h
-    signalmanager.h
-    signalmanager.cpp
-)
+qt_add_executable(P2PVoiceCall main.cpp)
 
 qt_add_qml_module(P2PVoiceCall
     URI P2PVoiceCall
     VERSION 1.0
     SOURCES webrtc.cpp webrtc.h
-    SOURCES audioinput.cpp audioinput.h audiooutput.cpp audiooutput.h
+    # SOURCES audioin.cpp audioin.h audiooutput.cpp audiooutput.h
     SOURCES socket.io-client-cpp/src/sio_client.cpp socket.io-client-cpp/src/sio_client.h socket.io-client-cpp/src/sio_message.h socket.io-client-cpp/src/sio_socket.cpp socket.io-client-cpp/src/sio_socket.h
     SOURCES socket.io-client-cpp/src/internal/sio_client_impl.cpp socket.io-client-cpp/src/internal/sio_client_impl.h socket.io-client-cpp/src/internal/sio_packet.cpp socket.io-client-cpp/src/internal/sio_packet.h
     SOURCES signalmanager.h signalmanager.cpp
     RESOURCES resources.qrc
 )
-# >>>>>>> 13201c75b07ed9a37cb21ea5acfe0c999e9c6c98
 set_target_properties(P2PVoiceCall PROPERTIES
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -58,8 +39,15 @@ install(TARGETS P2PVoiceCall
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
+if(EXISTS "${CMAKE_SOURCE_DIR}/path")
+    include(${CMAKE_SOURCE_DIR}/path)
+else()
+    message(WARNING "Path file not found. Please create it to define local paths.")
+endif()
+
 add_definitions(-D_WEBSOCKETPP_CPP11_STL_)
 add_definitions(-D_WEBSOCKETPP_CPP11_FUNCTIONAL_)
+# add_definitions(-DSIO_TLS)
 add_definitions(-DBOOST_DATE_TIME_NO_LIB)
 add_definitions(-DBOOST_REGEX_NO_LIB)
 add_definitions(-DASIO_STANDALONE)
@@ -78,7 +66,4 @@ target_link_libraries(P2PVoiceCall PRIVATE C:/Qt/Tools/OpenSSLv3/Win_x64/bin/lib
 target_link_libraries(P2PVoiceCall PRIVATE C:/Qt/Tools/OpenSSLv3/Win_x64/bin/libssl-3-x64.dll)
 target_link_libraries(P2PVoiceCall PRIVATE ${PATH}/opus/Windows/Mingw64/libopus.a)
 target_link_libraries(P2PVoiceCall PRIVATE ws2_32 ssp)
-target_link_libraries(P2PVoiceCall PRIVATE Qt6::Quick Qt6::Multimedia Qt6::Core Qt6::Gui Qt6::Widgets)
-# set(CMAKE_AUTOMOC ON)
-find_package(Qt6 REQUIRED COMPONENTS Multimedia)
-# target_link_libraries(mytarget PRIVATE Qt6::Multimedia)
+target_link_libraries(P2PVoiceCall PRIVATE Qt6::Quick Qt6::Multimedia)
