--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(CA1 VERSION 0.1 LANGUAGES CXX)
 
+# find_package(Qt5 COMPONENTS Core Multimedia REQUIRED)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(OPENSSL_ROOT_DIR "C:/Qt/Tools/OpenSSLv3/Win_x64")
@@ -19,7 +20,7 @@ qt_add_qml_module(P2PVoiceCall
     URI P2PVoiceCall
     VERSION 1.0
     SOURCES webrtc.cpp webrtc.h
-    # SOURCES audioin.cpp audioin.h audiooutput.cpp audiooutput.h
+    SOURCES audioinput.cpp audioinput.h audiooutput.cpp audiooutput.h
     SOURCES socket.io-client-cpp/src/sio_client.cpp socket.io-client-cpp/src/sio_client.h socket.io-client-cpp/src/sio_message.h socket.io-client-cpp/src/sio_socket.cpp socket.io-client-cpp/src/sio_socket.h
     SOURCES socket.io-client-cpp/src/internal/sio_client_impl.cpp socket.io-client-cpp/src/internal/sio_client_impl.h socket.io-client-cpp/src/internal/sio_packet.cpp socket.io-client-cpp/src/internal/sio_packet.h
     SOURCES signalmanager.h signalmanager.cpp
